# rm_navi_study

./: .gitignore  Fast-LIO 拟合平面核心知识点笔记.md  README.md  moca.sh  myself.md  study  study.md
src/Point-LIO_cxr/config/: RMUC.yaml  mid360_inverse.yaml
src/Point-LIO_cxr/include/: common_lib.h
src/Point-LIO_cxr/launch/: RMUC.launch.py
src/Point-LIO_cxr/src/: laserMapping.cpp
src/auto_aim_interfaces/: CMakeLists.txt
src/auto_aim_interfaces/msg/: Armor.msg  Base.msg  Bases.msg  DebugArmor.msg  DebugBases.msg  Detection.msg  Detections.msg  Fdb.msg  GimbalCtrl.msg  GimbalFdb.msg  KeyPointAndFloat.msg  NaviFdb.msg  Target.msg  TrackerInfo.msg
src/livox_ros_driver2_cxr/config/: MID360_config.json  MID360_configú¿╕┤╝■ú⌐.json
src/livox_ros_driver2_cxr/launch/: msg_MID360_launch.py
src/livox_ros_driver2_cxr/src/: lddc.cpp  lddc.h
src/livox_ros_driver2_cxr/src/include/: ros2_headers.h
src/navi_cal/: CMakeLists.txt  package.xml
src/navi_cal/config/: navi_cal.yaml
src/navi_cal/include/navi_cal/: navi_cal.hpp
src/navi_cal/launch/: navi_cal.py
src/navi_cal/src/: navi_cal.cpp
src/remove_pointcloud/config/: RMUC.yaml
src/remove_pointcloud/include/remove_pointcloud/: remove_pointcloud.hpp
src/remove_pointcloud/launch/: remove_pointcloud.launch.py
src/remove_pointcloud/src/: remove_pointcloud.cpp
src/serial_driver/: CMakeLists.txt  package.xml
src/serial_driver/include/: hardware_interface.h  protocol.h  serial_device.h
src/serial_driver/include/serial_driver/: serial_driver_node.hpp
src/serial_driver/src/: crc.cpp  serial_device.cpp  serial_driver_node.cpp
